Div, Img, Bookmarks etc

--- a/HTML/3 August/index.html
+++ b/HTML/3 August/index.html
@@ -13,6 +13,11 @@
                 color: blue;
                 background-color: brown;
             }
+
+            .my-custom-colors {
+                color: blue;
+                background-color: yellow;;
+            }
         </style>
     </head>
     <body>
@@ -50,8 +55,8 @@
 
 
 
-       <h3>Shopping List - Ordered List</h3>
-       <ol type="1" reversed>
+       <h3 class="my-custom-colors">Shopping List - Ordered List</h3>
+       <ol class="my-custom-colors" type="1" reversed>
         <li>Shoes
             <ol>
                 <li>Sneakers</li>
@@ -106,11 +111,11 @@
         <li>Medicines</li>
        </ul>
 
-       <h3>Items with span</h3>
-       <span style="background-color:red">Shoes</span>
-       <span>Mobile</span>
-       <span>Laptop</span>
-       <p>Mobile Cover</p>
+       <h3 class="my-custom-colors">Items with span</h3>
+       <span class="my-custom-colors">Shoes</span>
+       <span class="my-custom-colors">Mobile</span>
+       <span class="my-custom-colors">Laptop</span>
+       <p class="my-custom-colors">Mobile Cover</p>
        <span>Clothes</span>
        <span>Watch</span>
        <a href="https://www.facebook.com/">Click Here to go to facebook</a>
